<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.assignment_5.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />
    <activity
        android:id="@+id/mainActivity"
        android:name="com.example.assignment_5.MainActivity"
        android:label="Login"
        tools:layout="@layout/activity_main" />
    <fragment
        android:id="@+id/logOut"
        android:name="com.example.assignment_5.LogOut"
        android:label="@string/LogoutName"
        tools:layout="@layout/fragment_log_out" />
    <fragment
        android:id="@+id/preferences"
        android:name="com.example.assignment_5.preferences"
        android:label="@string/preferencesFrag"
        tools:layout="@layout/fragment_preferences" />
</navigation>