<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/submitLogin"
        android:layout_width="383dp"
        android:layout_height="53dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/audiowide"
        android:text="Login"
        android:textColor="@color/fontColor"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/EmailField"
        android:layout_width="340dp"
        android:layout_height="57dp"
        android:layout_marginStart="101dp"
        android:layout_marginEnd="101dp"
        android:layout_marginBottom="72dp"
        android:ems="10"
        android:fontFamily="@font/audiowide"
        android:gravity="center"
        android:hint="@string/emailText"
        android:inputType="textEmailAddress"
        android:text="@string/emailText"
        android:textColor="@color/fontColor"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/PasswordField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="98dp"
        android:layout_marginEnd="104dp"
        android:layout_marginBottom="256dp"
        android:ems="10"
        android:fontFamily="@font/audiowide"
        android:hint="@string/passwordText"
        android:inputType="textPassword"
        android:text="@string/passwordText"
        android:textColor="@color/fontColor"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/submitLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.421"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="168dp"
        android:layout_marginEnd="186dp"
        android:layout_marginBottom="21dp"
        android:fontFamily="@font/audiowide"
        android:text="@string/passwordLabel"
        android:textColor="@color/fontColor"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/PasswordField"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:layout_width="329dp"
        android:layout_height="92dp"
        android:layout_marginStart="168dp"
        android:layout_marginTop="164dp"
        android:layout_marginEnd="186dp"
        android:layout_marginBottom="26dp"
        android:fontFamily="@font/audiowide"
        android:gravity="center"
        android:text="@string/EmailLabel"
        android:textColor="@color/fontColor"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/EmailField"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.468"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.56" />

</androidx.constraintlayout.widget.ConstraintLayout>